# diifferential_drive_robot

./: .gitignore  JOURNAL.md  config.json  important_commands.txt  multi_story_car.urdf.xacro  robot.urdf  simulation_multi_agent.py  swarm_brain.pth  swarm_method_one.py  test_output.urdf  train_gazebo_dqn.py
.devcontainer/: Dockerfile
arena/: large_arena.world  maze_arena.world  maze_arena_one.world  maze_arena_tw.world
assets/: base_link.part  base_link.stl  castro_wheel_1.part  castro_wheel_1.stl  font_ultra_1.part  font_ultra_1.stl  left_ultra_1.part  left_ultra_1.stl  left_wheel_1.part  left_wheel_1.stl  right_ulta_1.part  right_ulta_1.stl  right_wheel_1.part  right_wheel_1.stl
journal/01_hello_world/: CMakeLists.txt  package.xml
journal/01_hello_world/src/: basic_publisher.cpp  basic_subscriber.cpp
journal/02_custom_msg/: CMakeLists.txt  package.xml
journal/02_custom_msg/src/: coord_publisher.cpp
journal/03_kinematics/: CMakeLists.txt  package.xml
journal/03_kinematics/src/: kinematics_node.cpp
journal/04_uart_bridge/: CMakeLists.txt  package.xml
journal/04_uart_bridge/src/: uart_bridge_node.cpp
journal/05_teleop_node/: CMakeLists.txt  package.xml
journal/05_teleop_node/src/: teleop_node.cpp
my_robot_description/: config.json
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: kinematics_1.cpp  teleop_1.cpp
src/diff_drive_msgs/: CMakeLists.txt  package.xml
src/diff_drive_msgs/msg/: coord_publisher.cpp  coord_subscriber.cpp
