<?xml version="1.0"?>
<package format="3">
  <name>04_uart_bridge</name>
  <version>0.0.0</version>
  <description>UART bridge between ROS2 and STM32</description>
  <maintainer email="tusharupadhiya2@gmail.com">Tushar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>diff_drive_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>