<?xml version="1.0"?>
<package format="3">
  <name>05_teleop_node</name>
  <version>0.0.0</version>
  <description>Keyboard teleoperation node</description>
  <maintainer email="tusharupadhiya2@gmail.com">Tushar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>